--- a/configs/fusion/lvis_bbox_only_vs_poly_prefer_1to1.yaml
+++ b/configs/fusion/lvis_bbox_only_vs_poly_prefer_1to1.yaml
@@ -15,14 +15,21 @@
 targets:
   - dataset: lvis
     name: lvis_bbox_only_max60
-    template: aux_dense
+    template: bbu_dense
     ratio: 1.0
     train_jsonl: public_data/lvis/rescale_32_768_bbox_max60/train.bbox_only.max60.coord.jsonl
     val_jsonl: public_data/lvis/rescale_32_768_bbox_max60/val.bbox_only.max60.coord.jsonl
     user_prompt: >-
       Detect and list every object in the image, ordered top-to-bottom then left-to-right.
-      Return a single JSON object where each entry has desc plus bbox_2d ONLY (no poly),
-      using `<|coord_N|>` tokens (0–999).
+      Return a single JSON object.
+    system_prompt: |-
+      You are a general-purpose object detection and grounding assistant.
+      Output exactly one JSON object like {"object_1":{...}} with no extra text.
+      - Order objects top-to-bottom then left-to-right. Index from 1.
+      - Each object must have a plain English desc and one bbox_2d only.
+      - bbox_2d format: [x1, y1, x2, y2] with x1<=x2 and y1<=y2.
+      - Coordinates must be written as coord tokens `<|coord_N|>` only (N in [0,999]).
+      - JSON layout: single line; one space after colons and commas; double quotes for keys/strings; no trailing text.
 
   - dataset: lvis
     name: lvis_poly_prefer_semantic_cap20_max60
@@ -32,7 +39,18 @@ targets:
     val_jsonl: public_data/lvis/rescale_32_768_poly_prefer_semantic_max60/val.poly_prefer_semantic_cap20.max60.coord.jsonl
     user_prompt: >-
       Detect and list every object in the image, ordered top-to-bottom then left-to-right.
-      Prefer poly for each object (single polygon, <=20 vertices). If the polygon is unreliable
-      (e.g., heavily occluded / only a tiny visible fragment), output bbox_2d instead.
-      Use `<|coord_N|>` tokens (0–999).
-
+      Return a single JSON object.
+    system_prompt: |-
+      You are a general-purpose object detection and grounding assistant.
+      Output exactly one JSON object like {"object_1":{...}} with no extra text.
+      - Order objects top-to-bottom then left-to-right. Index from 1.
+      - Each object must have a plain English desc and exactly one geometry key: bbox_2d OR poly (never both).
+      - Prefer poly whenever the object shape is reasonably representable. Use bbox_2d as a semantic approximation when:
+        - the visible region is only a tiny fragment (heavy occlusion), or
+        - the polygon would be too complex/unstable to describe reliably.
+      - poly format: a single closed polygon as an ordered list of [x, y] vertices (<=20 vertices).
+        - Preserve adjacency; last vertex connects back to the first.
+        - Canonical vertex order: start from the top-most (then left-most) vertex, then go clockwise around the centroid.
+      - bbox_2d format: [x1, y1, x2, y2] with x1<=x2 and y1<=y2.
+      - Coordinates must be written as coord tokens `<|coord_N|>` only (N in [0,999]).
+      - JSON layout: single line; one space after colons and commas; double quotes for keys/strings; no trailing text.
