--- a/configs/fusion/lvis_bbox_only_vs_poly_prefer_1to1.yaml
+++ b/configs/fusion/lvis_bbox_only_vs_poly_prefer_1to1.yaml
@@ -15,7 +15,7 @@
 targets:
   - dataset: lvis
     name: lvis_bbox_only_max60
-    template: bbu_dense
+    template: bbox_only
     ratio: 1.0
     train_jsonl: public_data/lvis/rescale_32_768_bbox_max60/train.bbox_only.max60.coord.jsonl
     val_jsonl: public_data/lvis/rescale_32_768_bbox_max60/val.bbox_only.max60.coord.jsonl
@@ -33,7 +33,7 @@ targets:
 
   - dataset: lvis
     name: lvis_poly_prefer_semantic_cap20_max60
-    template: aux_dense
+    template: poly_preferred
     ratio: 1.0
     train_jsonl: public_data/lvis/rescale_32_768_poly_prefer_semantic_max60/train.poly_prefer_semantic_cap20.max60.coord.jsonl
     val_jsonl: public_data/lvis/rescale_32_768_poly_prefer_semantic_max60/val.poly_prefer_semantic_cap20.max60.coord.jsonl
