--- a/configs/dlora/sft_stage1_softce_w1-continue.yaml
+++ b/configs/dlora/sft_stage1_softce_w1-continue.yaml
@@ -7,21 +7,22 @@ global_max_length: 12000
 
 model:
   # Base checkpoint (expanded vocab with <|coord_*|> tokens)
-  model: model_cache/Qwen3-VL-4B-Instruct-coordexp
+  # model: model_cache/Qwen3-VL-4B-Instruct-coordexp
+  model: output/1-24/stage_1/poly_prefer_semantic_max60/epoch_4-softce_w1-LRs-2e-4_1e-4_4e-4-from-base-4B/checkpoint-1520_merged
 
 training:
-  output_dir: ./output/1-24/stage_1/poly_prefer_semantic_max60
-  run_name: epoch_4-softce_w1-LRs-2e-4_1e-4_4e-4-from-base-4B
-  logging_dir: ./tb/1-24/stage_1/poly_prefer_semantic_max60
-  num_train_epochs: 4
+  output_dir: ./output/1-24/stage_1-continue/
+  run_name: epoch_2-softCE-3-W1-1-gate-1-llm_lr-1e-4-vit_lr-0.5e-4-aligner_lr-2e-4
+  logging_dir: ./tb/1-24/stage_1-continue/
+  num_train_epochs: 2
   per_device_train_batch_size: 1
   per_device_eval_batch_size: 1
   effective_batch_size: 32
   # Use the custom optimizer variant so coord_offset can have its own lr buckets.
   optimizer: multimodal_coord_offset
-  learning_rate: 2.0e-4
-  vit_lr: 1.0e-4
-  aligner_lr: 4.0e-4
+  learning_rate: 1.0e-4
+  vit_lr: 0.5e-4
+  aligner_lr: 2.0e-4
   packing: true
   packing_buffer: 512
   packing_min_fill_ratio: 0.7
@@ -30,7 +31,7 @@ training:
   eval_steps: 40
   save_steps: 200
   save_total_limit: 2
-  save_delay_steps: 800
+  save_delay_steps: 400
 
 custom:
   train_jsonl: public_data/lvis/rescale_32_768_poly_prefer_semantic_max60/train.poly_prefer_semantic_cap20.max60.coord.jsonl
