Add semantic model configuration to evaluation YAML files
- Introduced `semantic_model`, `semantic_device`, `semantic_batch_size`, and `semantic_threshold` parameters to multiple evaluation configuration files for improved inference capabilities.
- Updated `semantic_threshold` in `a_only_iter_4_ckpt.yaml` from 0.6 to 0.5 for consistency across configurations.

--- a/configs/bench/lvis_bbox_max60_val_infer_eval_base.yaml
+++ b/configs/bench/lvis_bbox_max60_val_infer_eval_base.yaml
@@ -62,3 +62,7 @@ eval:
   overlay: false
   overlay_k: 12
   num_workers: 8
+  semantic_model: model_cache/all-MiniLM-L6-v2-local
+  semantic_device: cuda:0
+  semantic_batch_size: 64
+  semantic_threshold: 0.5
