--- a/configs/stage1/sft_base.yaml
+++ b/configs/stage1/sft_base.yaml
@@ -1,5 +1,6 @@
 extends: ../base.yaml
 
+global_max_length: 12000
 
 model:
   model: model_cache/models/Qwen/Qwen3-VL-4B-Instruct-coordexp
@@ -16,13 +17,13 @@ tuner:
   modules_to_save: []
   lora_rank: 16
   lora_alpha: 32
-  lora_dropout: 0.1
+  lora_dropout: 0.0
   lora_bias: none
 
 training:
   output_dir: ./output/stage1/base
   run_name: epoch_30-stage1-lrs_4_2_8-sft_base
-  num_train_epochs: 30
+  num_train_epochs: 4
   per_device_train_batch_size: 1
   per_device_eval_batch_size: 4
   effective_batch_size: 32
@@ -33,7 +34,7 @@ training:
   lr_scheduler_kwargs:
     min_lr: 1.0e-6
   packing: true
-  weight_decay: 0.1
+  weight_decay: 0.0
   warmup_ratio: 0.1
   add_version: true
   save_safetensors: true
