Fix static packing precompute deadlock in CUDA/DDP

--- a/configs/stage1/sft_stage1_softce_w1-bbox-only.yaml
+++ b/configs/stage1/sft_stage1_softce_w1-bbox-only.yaml
@@ -27,6 +27,7 @@ training:
   packing_buffer: 512
   packing_min_fill_ratio: 0.7
   packing_drop_last: true
+  packing_length_precompute_workers: 8
   eval_packing: true
   eval_steps: 40
   save_steps: 200
