--- a/configs/stage1/ablation_2b/soft_ce_w1_gate.yaml
+++ b/configs/stage1/ablation_2b/soft_ce_w1_gate.yaml
@@ -1,8 +1,11 @@
 extends: ../sft_stage1_softce_w1-bbox-only.yaml
 
+model:
+  model_name: model_cache/models/Qwen/Qwen3-VL-2B-Instruct-coordexp
+
 training:
   output_dir: ./output/stage1_2b/coco_bbox_max60-soft_ce_w1_gate
-  run_name: epoch_4-softce_w1_gate-LRs-2e-4_1e-4_4e-4-from-base-2B
+  run_name: epoch_4-softce_w1_gate-LRs-2e-4_1e-4_4e-4-from-base-4B
   logging_dir: ./tb/stage1_2b/coco_bbox_max60-soft_ce_w1_gate
 
 
